@@ -1,5 +1,7 @@
 2014-06-26  Glenn Morris  <rgm@gnu.org>
 
+	* automated/package-x-test.el: Do not mess with load-path.
+
 	* automated/Makefile.in (%.log): If error, dump log to stdout.
 
 2014-06-26  Stefan Monnier  <monnier@iro.umontreal.ca>
